objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Sales_Lab__c</fullName>
        <label>Sales Lab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>April Baseline</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Guide 2.0</fullName>
                </value>
                <value>
                    <fullName>Mobile Test</fullName>
                </value>
                <value>
                    <fullName>SDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Connected with Gatekeeper</fullName>
                </value>
                <value>
                    <fullName>Connected with Target</fullName>
                </value>
                <value>
                    <fullName>LifeCycle Milestone Completed</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_of_Issues_or_Concerns__c</fullName>
        <label>Summary of Issues or Concerns</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Product functionality</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Service concerns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Attempt_Result__c</fullName>
        <label>1st Attempt Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left Message/VM</fullName>
                </value>
                <value>
                    <fullName>No answer</fullName>
                </value>
                <value>
                    <fullName>Connected - Rescheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2nd_Attempt_Result__c</fullName>
        <label>2nd Attempt Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left Message/VM</fullName>
                </value>
                <value>
                    <fullName>No answer</fullName>
                </value>
                <value>
                    <fullName>Connected - Rescheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>internal_external_activity__c</fullName>
        <inlineHelpText>Is this an activity for an internal meeting/call or external customer facing meeting/call</inlineHelpText>
        <label>Internal or External Activity?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                    <default>true</default>
                    <label>External</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AlternateSFId__c</fullName>
        <description>Unique identifier signifying the target instance created Id for the corresponding source record</description>
        <inlineHelpText>Unique identifier signifying the target instance created Id for the corresponding source record</inlineHelpText>
        <label>AlternateSFId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <inlineHelpText>What meeting/call/activity are you logging here?</inlineHelpText>
        <label>Activity Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Activity_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>M000 - Conversation Initiation</fullName>
                </value>
                <value>
                    <fullName>M001 – Discovery Call</fullName>
                </value>
                <value>
                    <fullName>M002 – Internal Download Call</fullName>
                </value>
                <value>
                    <fullName>M003 - Demo/Value Presentation</fullName>
                </value>
                <value>
                    <fullName>M004 - Detailed Audit Discovery</fullName>
                </value>
                <value>
                    <fullName>M005 –  Audit Download</fullName>
                </value>
                <value>
                    <fullName>M006 - Implementation &amp; ROI Investigation Call</fullName>
                </value>
                <value>
                    <fullName>M006 - ROI info gathering</fullName>
                </value>
                <value>
                    <fullName>M006 - Custom Implementation Investigation</fullName>
                </value>
                <value>
                    <fullName>Review Initial SOW with Customer</fullName>
                </value>
                <value>
                    <fullName>M007 - Product Assessment &amp; Strategy Internal Stakeholder Meeting</fullName>
                </value>
                <value>
                    <fullName>M008 - Solutions in Action Presentation</fullName>
                </value>
                <value>
                    <fullName>M008 - ROI Analysis Presentation</fullName>
                </value>
                <value>
                    <fullName>M009 - Proposal Creation &amp; Update SOW</fullName>
                </value>
                <value>
                    <fullName>M009 – Solutions in Action Presentation</fullName>
                </value>
                <value>
                    <fullName>M010 - Present Proposal &amp; SOW</fullName>
                </value>
                <value>
                    <fullName>M10.5 Network Adoption</fullName>
                </value>
                <value>
                    <fullName>M011 - Moving to Close</fullName>
                </value>
                <value>
                    <fullName>M012 - Proof of Value Agreement</fullName>
                </value>
                <value>
                    <fullName>M013 - Contract Creation</fullName>
                </value>
                <value>
                    <fullName>M013– Proof of Value Agreement</fullName>
                </value>
                <value>
                    <fullName>M014 - Deliver Contract to the Customer</fullName>
                </value>
                <value>
                    <fullName>M015– Deliver Contract</fullName>
                </value>
                <value>
                    <fullName>Custom Implementation Discovery Call</fullName>
                </value>
                <value>
                    <fullName>M100 - Deal Closes</fullName>
                </value>
                <value>
                    <fullName>M101 - Create Detailed Project Plan</fullName>
                </value>
                <value>
                    <fullName>M104- Design consultation</fullName>
                </value>
                <value>
                    <fullName>M104 - Introduction call</fullName>
                </value>
                <value>
                    <fullName>M105 - Custom Template Creation</fullName>
                </value>
                <value>
                    <fullName>M106 - Bulk Account Setup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
  <sharingModel>ControlledByParent</sharingModel>

    <listViews>
        <fullName>Griswold</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>contains</operation>
            <value>Sarah</value>
        </filters>
        <filters>
            <field>Milestone__c</field>
            <operation>equals</operation>
            <value>Monthly Touch Point</value>
        </filters>
        <filters>
            <field>TASK.WHAT_NAME</field>
            <operation>contains</operation>
            <value>Griswold</value>
        </filters>
        <label>Griswold</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyCallBacks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Call back</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Call Backs</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team's Activities</label>
    </listViews>
    <listViews>
        <fullName>Next30DaysTasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <label>Next 30 Days Tasks</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.WHAT_NAME</field>
            <operation>contains</operation>
            <value>griswold</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>contains</operation>
            <value>Sarah</value>
        </filters>
        <label>Today's Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>